--- a/app/config/local.example.neon
+++ b/app/config/local.example.neon
@@ -1,11 +1,12 @@
 
 parameters:
 	devPort: 8099 #Zvolte port jiný pro každý projekt
-	localIp: 192.168.1.159
+	localIp: #192.168.1.159 todo NASTAVIT!
 	devServer: http://%localIp%:%devPort%
 	productionMode: false
 	environment: local
 	localhost: true
+
 
 
 assets:
