--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap.native": "^2.0.27",
     "chokidar": "^3.3.1",
     "clean-webpack-plugin": "^3.0.0",
+    "cm-show-invisibles": "^3.0.1",
     "codemirror": "^5.51.0",
     "css-hot-loader": "^1.4.4",
     "css-loader": "^3.4.2",
@@ -36,10 +37,12 @@
     "style-loader": "^1.1.3",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.5",
+    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.3",
     "webpack-manifest-plugin": "^2.2.0",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^4.2.2",
+    "js-beautify": "latest"
   },
   "scripts": {
     "start:dev": "webpack-dev-server --config ./client/webpack/dev.js",
