--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-  "name": "nette/web-project",
-  "description": "Nette: Standard Web Project",
+  "name": "prosky/nbsp",
+  "description": "Tool to fill in non breakable characters",
   "keywords": [
-    "nette"
+    "nbsp"
   ],
-  "type": "project",
+  "type": "library",
   "license": [
     "MIT",
     "BSD-3-Clause",
@@ -13,34 +13,17 @@
   ],
   "require": {
     "php": ">= 7.1",
-    "nette/application": "^3.0",
-    "nette/bootstrap": "^3.0",
-    "nette/caching": "^3.0",
-    "nette/database": "^3.0",
-    "nette/di": "^3.0",
-    "nette/finder": "^2.5",
-    "nette/forms": "^3.0",
-    "nette/http": "^3.0",
-    "nette/mail": "^3.0",
-    "nette/robot-loader": "^3.0",
-    "nette/security": "^3.0",
-    "nette/utils": "^3.0",
-    "latte/latte": "v2.5.x-dev",
-    "tracy/tracy": "^2.6",
     "ext-zip": "*",
     "ext-dom": "*",
     "ext-mbstring": "*"
   },
-  "require-dev": {
-	  "roave/security-advisories": "dev-master",
-	  "nette/tester": "^2.0"
-  },
   "autoload": {
     "classmap": [
-      "app/Bootstrap.php"
+      "src/Nbsp.php",
+      "src/Macro/NbspMacro.php"
     ]
   },
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "prefer-stable": true,
   "config": {
     "platform": {
