--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "php": ">= 7.1",
     "ext-zip": "*",
     "ext-dom": "*",
-    "ext-mbstring": "*"
+    "ext-mbstring": "*",
+    "latte/latte": "^2.6"
   },
   "autoload": {
     "classmap": [
